--- a/App/android/app/src/main/res/values-v31/styles.xml
+++ b/App/android/app/src/main/res/values-v31/styles.xml
@@ -7,7 +7,7 @@
         <item name="android:windowLayoutInDisplayCutoutMode">shortEdges</item>
         <item name="android:windowSplashScreenBackground">#42a5f5</item>
         <item name="android:windowSplashScreenAnimatedIcon">@drawable/android12splash</item>
-        <item name="android:windowSplashScreenIconBackgroundColor">#111111</item>
+        <item name="android:windowSplashScreenIconBackgroundColor">#42a5f5</item>
     </style>
     <!-- Theme applied to the Android Window as soon as the process has started.
          This theme determines the color of the Android Window while your
